--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,13 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.banner_container {
+  background-color: #f7f7f7;
+  height: 200px;
+  text-align: center;
+}
+
+.banner_img {
+  height: 200px;
+}
