--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,10 @@ body {
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: black;
-  opacity: 0.7;
+  background-color: rgb(0, 0, 0, 0.7);
+  overflow: auto;
+}
+
+.character-modal {
+  background-color: white;
 }
