--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,12 @@ body {
   font-family: 'Barlow', sans-serif;
 }
 
-.banner_container {
+.banner {
   height: 200px;
   text-align: center;
 }
 
-.banner_logo {
+.banner > img {
   height: 200px;
 }
 
